Início da lista de exercícios

--- a/03_operacaoMatematica.html
+++ b/03_operacaoMatematica.html
@@ -9,8 +9,8 @@
     */
 
     //ENTRADA
-
-
+const n1 = Number(prompt("Informe um número:"));
+const n2 = Number(prompt("Informe outro número:"));
     //PROCESSAMENTO
 
     
