--- a/07_estacaoAno.html
+++ b/07_estacaoAno.html
@@ -7,7 +7,7 @@
     */
 
     //ENTRADA
-
+const hemisferio = prompt("Informe o em que se encontra hemisfério (Norte-N ou Sul-S):").toUpperCase();
     
     //PROCESSAMENTO
 
