--- a/03_operacaoMatematica.html
+++ b/03_operacaoMatematica.html
@@ -11,9 +11,58 @@
     //ENTRADA
 const n1 = Number(prompt("Informe um número:"));
 const n2 = Number(prompt("Informe outro número:"));
+const operacao = prompt("Qual operação deseja realizar? (+, -, *, /):");
     //PROCESSAMENTO
 
-    
-    //SAÍDA
+    let resultado;
+    let parImpar;
+    let positivoNegativo;
+    let inteiroDecimal; 
 
+switch (operacao) {
+    case "+":
+        resultado = n1 + n2;
+        break;
+    case "-":
+        resultado = n1 - n2;
+        break;
+    case "*":
+        resultado = n1 * n2;
+        break;  
+    case "/":
+        resultado = n1 / n2;
+        break;
+    default:
+        alert("Informe corretamente (apenas números nas duas primeiras perguntas - e sinais das operações na terceira, +, -, * ou /).");
+        break;
+}
+
+switch (resultado%2) {
+    case 0 :
+        parImpar = "par"
+        break;
+    default:
+        parImpar = "ímpar"
+        break;
+}
+
+switch (resultado >= 0) {
+    case true :
+        positivoNegativo = "positivo"
+        break;
+    default:
+        positivoNegativo = "negativo"
+        break;  
+}
+
+switch (resultado === Math.floor(resultado)) {
+    case true :
+        inteiroDecimal = "inteiro"
+        break;
+    default:
+        inteiroDecimal = "decimal"
+        break;
+}
+    //SAÍDA
+alert(`O resultado da operação é: ${resultado}, que é um número ${parImpar}, ${positivoNegativo} e ${inteiroDecimal}.`);
 </script>
