--- a/04_vogal.html
+++ b/04_vogal.html
@@ -6,10 +6,21 @@
     */
 
     // ENTRADA
-
+const caractere = prompt("Informe um caractere:").toLowerCase();
     
     // PROCESSAMENTO
-
+switch (caractere) {
+    case 'a':
+    case 'e':
+    case 'i':
+    case 'o':
+    case 'u':
+        alert(`O caractere "${caractere}" é uma vogal.`);
+        break;
+    default:
+        alert(`O caractere "${caractere}" não é uma vogal.`);
+        break;
+}
     
     // SAÍDA
 
