--- a/05_investigacaoCriminal.html
+++ b/05_investigacaoCriminal.html
@@ -12,10 +12,69 @@
     */
 
     //ENTRADA
-
+const pergunta1 = prompt("Telefonou para a vítima? (sim-S ou não-N)").toUpperCase();
+const pergunta2 = prompt("Esteve no local do crime? (sim-S ou não-N)").toUpperCase();
+const pergunta3 = prompt("Mora perto da vítima? (sim-S ou não-N)").toUpperCase();
+const pergunta4 = prompt("Devia para a vítima? (sim-S ou não-N)").toUpperCase();
+const pergunta5 = prompt("Já trabalhou com a vítima? (sim-S ou não-N)").toUpperCase();
     
     //PROCESSAMENTO
+let sim;
 
+switch (pergunta1) {
+    case 'S':
+        sim = 1;
+        break;
+    default:
+        sim = 0;
+}
+switch (pergunta2) {
+    case 'S':
+        sim += 1;
+        break;  
+    default:
+        sim += 0;
+}
+switch (pergunta3) {
+    case 'S':
+        sim += 1;
+        break;
+    default:
+        sim += 0;
+}
+switch (pergunta4) {
+    case 'S':
+        sim += 1;
+        break;
+    default:
+        sim += 0;
+}
+switch (pergunta5) {
+    case 'S':
+        sim += 1;
+        break;  
+    default:
+        sim += 0;
+}
+
+switch (sim) {
+    case 0: 
+    case 1:
+        alert("Inocente");
+        break;
+    case 2:
+        alert("Suspeita");
+        break;
+    case 3:
+    case 4:
+        alert("Cúmplice");
+        break;
+    case 5:
+        alert("Assassino");
+        break;
+    default:
+        alert(`Informe um valor válido (apenas "S" ou "N").`);
+}
 
     //SAÍDA
 
