--- a/07_estacaoAno.html
+++ b/07_estacaoAno.html
@@ -8,10 +8,71 @@
 
     //ENTRADA
 const hemisferio = prompt("Informe o em que se encontra hemisfério (Norte-N ou Sul-S):").toUpperCase();
-    
+const mes = prompt("Informe o mês atual:    (janeiro-JAN, fevereiro-FEV, março-MAR, abril-ABR, maio-MAI, junho-JUN, julho-JUL, agosto-AGO, setembro-SET, outubro-OUT, novembro-NOV, desembro-DES)").toUpperCase();
     //PROCESSAMENTO
 
+/*  Norte: JUL, AGO e SET - verão
+           OUT, NOV e DES - outono
+           JAN, FEV e MAR - inverno
+           ABR, MAI e JUN - primavera
+    Sul:   JAN, FEV e MAR - verão
+           ABR, MAI e JUN - outono
+           JUL, AGO e SET - inverno
+           OUT, NOV e DES - primavera
+*/
 
+switch (hemisferio) {
+    case "N":
+        switch (mes) {
+            case "JUL":
+            case "AGO":
+            case "SET":
+                alert("Verão")
+                break;
+            case "OUT":
+            case "NOV":
+            case "DES":
+                alert("Outono")
+                break;
+            case "JAN":
+            case "FEV":
+            case "MAR":
+                alert("Inverno")
+                break;
+            case "ABR":
+            case "MAI":
+            case "JUN":
+                alert("Primavera")
+                break;
+            
+        } break;
+    case "S":
+        switch (mes) {
+            case "JUL":
+            case "AGO":
+            case "SET":
+                alert("Inverno")
+                break;
+            case "OUT":
+            case "NOV":
+            case "DES":
+                alert("Primavera")
+                break;
+            case "JAN":
+            case "FEV":
+            case "MAR":
+                alert("Verão")
+                break;
+            case "ABR":
+            case "MAI":
+            case "JUN":
+                alert("Outono")
+                break;
+        }
+        break;
+    default:
+        alert("Informe os dados pedidos corretamente.");
+}
     //SAÍDA
 
 </script>
