Fim da lista de exercícios de switch case

--- a/07_estacaoAno.html
+++ b/07_estacaoAno.html
@@ -71,7 +71,7 @@ switch (hemisferio) {
         }
         break;
     default:
-        alert("Informe os dados pedidos corretamente.");
+        alert("Informe os dados corretamente.");
 }
     //SAÍDA
 
